--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,3 +1,16 @@
 {{define "content"}}
-index
+<div class="header" id="index">
+  <h1>HomeIO</h1>
+  <h2>A new approach</h2>
+</div>
+
+<div class="content">
+  <div id="payload"></div>      
+</div>
+
+<div class="content">
+  <p>test</p>
+</div>
+
+
 {{end}}
