--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -8,19 +8,37 @@
   <meta name="author" content="Aleksander Kwiatkowski">
 
   <link rel="stylesheet" href="/assets/pure-min.css">
+  <link rel="stylesheet" href="/assets/jquery-ui.min.css">
+  <link rel="stylesheet" href="/assets/side-menu.css">
+
   <script src="/assets/jquery-2.1.3.min.js"></script>
+  <script src="/assets/jquery-ui.min.js"></script>
+  <script src="/assets/jquery.flot.min.js"></script>
+  <script src="/assets/ui.js"></script>
   <script src="/assets/main.js"></script>
 </head>
 <body>
 
-<h1>
-    {{ .title }}
-</h1>
+<div id="layout">
+  <a href="#menu" id="menuLink" class="menu-link">
+    <span></span>
+  </a>
 
-<hr/>
+  <div id="menu">
+    <div class="pure-menu">
+      <a class="pure-menu-heading" href="#">HomeIO</a>
 
-{{template "content" .}}
+      <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link" id="measLink">Measurements</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="main">
+    {{template "content" .}}
+  </div>
 
 </body>
 </html>
 {{end}}
+
