--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -14,6 +14,11 @@
   <script src="/assets/jquery-2.1.3.min.js"></script>
   <script src="/assets/jquery-ui.min.js"></script>
   <script src="/assets/jquery.flot.min.js"></script>
+  <script src="/assets/sammy-latest.min.js"></script>
+  
+  <script src="/assets/haml.js"></script>
+  <script src="/assets/sammy.haml.js"></script>
+  
   <script src="/assets/ui.js"></script>
   <script src="/assets/main.js"></script>
 </head>
@@ -26,16 +31,16 @@
 
   <div id="menu">
     <div class="pure-menu">
-      <a class="pure-menu-heading" href="#">HomeIO</a>
+      <a class="pure-menu-heading" href="#/">HomeIO</a>
 
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link" id="measLink">Measurements</a></li>
+        <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
+        <li class="pure-menu-item"><a href="#/refresh" class="pure-menu-link" id="measRefreshLink">Refresh</a></li>
       </ul>
     </div>
   </div>
 
-  <div id="main">
-    {{template "content" .}}
+  <div id="main" class="content">
   </div>
 
 </body>
