--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -35,6 +35,7 @@
 
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
+        <li class="pure-menu-item"><a href="#/measurements2" class="pure-menu-link" id="measLink2">Measurements 2</a></li>
         <li class="pure-menu-item"><a href="#/refresh" class="pure-menu-link" id="measRefreshLink">Refresh</a></li>
       </ul>
     </div>
