--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/assets/pure-min.css">
   <link rel="stylesheet" href="/assets/jquery-ui.min.css">
   <link rel="stylesheet" href="/assets/side-menu.css">
+  <link rel="stylesheet" href="/assets/main.css">
 
   <script src="/assets/jquery-2.1.3.min.js"></script>
   <script src="/assets/jquery-ui.min.js"></script>
