backend command refactoring

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,17 @@
-.meas-button {
+.homeio-button {
   color: white;
   border-radius: 4px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  background: #1cb841;
+  background: #4455b8;
   width: 90%;
   margin: 10px;
   padding: 10px; }
-  .meas-button .meas-value {
-    font-size: 200%; }
+
+.meas-button .meas-value {
+  font-size: 200%; }
+
+.meas-button-important {
+  background: #58b863; }
+
+.meas-header-important {
+  color: red; }
