--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -36,7 +36,8 @@
 
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
-        <li class="pure-menu-item"><a href="#/measurements2" class="pure-menu-link" id="measLink2">Measurements 2</a></li>
+        <li class="pure-menu-item"><a href="#/overseers" class="pure-menu-link" id="overseerLink">Overseers</a></li>
+        <li class="pure-menu-item"><a href="#/actions" class="pure-menu-link" id="actionLink">Actions</a></li>
         <li class="pure-menu-item"><a href="#/refresh" class="pure-menu-link" id="measRefreshLink">Refresh</a></li>
       </ul>
     </div>
