--- a/assets/main.css
+++ b/assets/main.css
@@ -15,3 +15,11 @@
 
 .meas-header-important {
   color: red; }
+
+.homeio-table {
+  width: 95%;
+  margin-top: 40px; }
+
+#graph {
+  height: 400px;
+  min-height: 400px; }
