--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,3 +23,13 @@
 .meas-header-important {
   color: red;
 }
+
+.homeio-table {
+  width: 95%;
+  margin-top: 40px;
+}
+
+#graph {
+  height: 400px;
+  min-height: 400px;
+}
