--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -7,21 +7,23 @@
   <meta name="description" content="HomeIO">
   <meta name="author" content="Aleksander Kwiatkowski">
 
-  <link rel="stylesheet" href="/assets/pure-min.css">
-  <link rel="stylesheet" href="/assets/jquery-ui.min.css">
-  <link rel="stylesheet" href="/assets/side-menu.css">
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/assets/css/pure-min.css">
+  <link rel="stylesheet" href="/assets/css/jquery-ui.min.css">
+  <link rel="stylesheet" href="/assets/css/pure-side-menu.css">
+  
+  <link rel="stylesheet" href="/assets/scss/app.css">
 
-  <script src="/assets/jquery-2.1.3.min.js"></script>
-  <script src="/assets/jquery-ui.min.js"></script>
-  <script src="/assets/jquery.flot.min.js"></script>
-  <script src="/assets/sammy-latest.min.js"></script>
+  <script src="/assets/js/jquery-2.1.3.min.js"></script>
+  <script src="/assets/js/jquery-ui.min.js"></script>
+  <script src="/assets/js/jquery.flot.min.js"></script>
+  <script src="/assets/js/sammy-latest.min.js"></script>
+  <script src="/assets/js/haml.js"></script>
+  <script src="/assets/js/sammy.haml.js"></script>
+  <script src="/assets/js/pure-ui.js"></script>
+
+  <script src="/assets/coffee/homeio_graph.js"></script>  
+  <script src="/assets/coffee/app.js"></script>
   
-  <script src="/assets/haml.js"></script>
-  <script src="/assets/sammy.haml.js"></script>
-  
-  <script src="/assets/ui.js"></script>
-  <script src="/assets/main.js"></script>
 </head>
 <body>
 
