--- a/assets/templates/meas/graph_detailed.haml
+++ b/assets/templates/meas/graph_detailed.haml
@@ -8,4 +8,6 @@
   var g = new HomeIOMeasGraph;
   g.meas_name = "#{meas_name}";
   g.element = "#graph";
+  g.periodicInterval = 500;
+  g.maxBufferSize = 500;
   g.prepare();
