--- a/assets/templates/meas/show.haml
+++ b/assets/templates/meas/show.haml
@@ -8,6 +8,10 @@
     = meas.name
 
 .content
+  %p
+    %a{href: "#/measurements/" + meas.name + "/graph", class: "pure-button button-xlarge "}
+      Graph
+
   %table.pure-table.homeio-table
     %tbody
       %tr
