--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -33,3 +33,13 @@
   height: 400px;
   min-height: 400px;
 }
+
+.graph-control {
+  position: relative;
+}
+
+.graph-last-time {
+  position: absolute;
+  display: inline-block;
+  right: 0px;
+}
