--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -20,6 +20,7 @@
   <script src="/assets/js/haml.js"></script>
   <script src="/assets/js/sammy.haml.js"></script>
   <script src="/assets/js/pure-ui.js"></script>
+  <script src="/assets/js/md5.min.js"></script>
 
   <script src="/assets/coffee/homeio_graph.js"></script>  
   <script src="/assets/coffee/app.js"></script>
