--- a/assets/templates/actions/show.haml
+++ b/assets/templates/actions/show.haml
@@ -24,6 +24,15 @@
         %td= action.lastExecutedAt
 
   %p
-    %form{action: "#/actions/execute", method: "POST"}
-      %input{type: "text", name: "password"}
-      %input{type: "submit", value: "Execute " + action.name}
+    %form.pure-form{action: "#/actions/execute", method: "POST"}
+      %fieldset
+        %legend
+          Type master password to execute action
+
+        %input{type: "hidden", name: "name", value: action.name}
+        %input{type: "text", name: "password", placeholder: "Type master password"}
+        &nbsp;
+        %input{type: "text", name: "result", id: 'action-result', placeholder: "Result", disabled: true}
+        &nbsp;
+        %input{type: "submit", value: "Execute " + action.name, class: "pure-button pure-button-primary action-execute-button"}
+        
