--- a/assets/templates/meas/graph_detailed.haml
+++ b/assets/templates/meas/graph_detailed.haml
@@ -8,6 +8,7 @@
   var g = new HomeIOMeasGraph;
   g.meas_name = "#{meas_name}";
   g.element = "#graph";
-  g.periodicInterval = 500;
+  g.periodicDynamicMultiplier = 5;
+  g.periodicDynamicMinimum = 1000; 
   g.maxBufferSize = 500;
   g.prepare();
