auto refresh meas list

--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -23,6 +23,7 @@
   <script src="/assets/js/md5.min.js"></script>
 
   <script src="/assets/coffee/homeio_graph.js"></script>  
+  <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>  
   <script src="/assets/coffee/app.js"></script>
   
 </head>
@@ -41,7 +42,7 @@
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
         <li class="pure-menu-item"><a href="#/overseers" class="pure-menu-link" id="overseerLink">Overseers</a></li>
         <li class="pure-menu-item"><a href="#/actions" class="pure-menu-link" id="actionLink">Actions</a></li>
-        <li class="pure-menu-item"><a href="#/refresh" class="pure-menu-link" id="measRefreshLink">Refresh</a></li>
+        <li class="pure-menu-item"><a href="#/stats" class="pure-menu-link" id="statsLink">Stats</a></li>
       </ul>
     </div>
   </div>
