--- a/assets/templates/meas/index.haml
+++ b/assets/templates/meas/index.haml
@@ -6,3 +6,10 @@
   #measArray.pure-g
 
   #measGraphArray.pure-g
+  
+  #lastUpdated
+  
+:javascript
+  var g = new HomeIOMeasValuePeriodic;
+  g.periodicInterval = 2000;
+  g.getMeas();  
