--- a/assets/templates/meas/_index_item.haml
+++ b/assets/templates/meas/_index_item.haml
@@ -2,7 +2,7 @@
 - if (meas.priority > 0) {klass = "meas-button-important" }
 
 .pure-u-1-3
-  %a{href: "#/measurements/" + meas.name, class: "homeio-button meas-button pure-button button-xlarge " + klass}
+  %a{href: "#/measurements/" + meas.name, class: "homeio-button meas-button pure-button button-xlarge " + klass, data-meas-name: meas.name}
     .meas-name
       = meas.name
     .meas-value
