--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -23,6 +23,7 @@
   <script src="/assets/js/md5.min.js"></script>
 
   <script src="/assets/coffee/homeio_graph.js"></script>  
+  <script src="/assets/coffee/homeio_graph_multi.js"></script>  
   <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>  
   <script src="/assets/coffee/app.js"></script>
   
