--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -68,3 +68,7 @@
 .button-secondary {
     background: rgb(66, 184, 221); /* this is a light blue */
 }
+
+.multi-graph-graph-container {
+  font-size: 10px;
+}
