--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -16,6 +16,7 @@
   <script src="/assets/js/jquery-2.1.3.min.js"></script>
   <script src="/assets/js/jquery-ui.min.js"></script>
   <script src="/assets/js/jquery.flot.min.js"></script>
+  <script src="/assets/js/jquery.flot.time.js"></script>  
   <script src="/assets/js/sammy-latest.min.js"></script>
   <script src="/assets/js/haml.js"></script>
   <script src="/assets/js/sammy.haml.js"></script>
