--- a/assets/templates/meas/show.haml
+++ b/assets/templates/meas/show.haml
@@ -7,7 +7,7 @@
   %h1{class: header_class}
     = meas.name
 
-.content
+.content-inner
   %p
     %a{href: "#/measurements/" + meas.name + "/graph", class: "pure-button button-xlarge "}
       Graph
