--- a/assets/templates/overseers/show.haml
+++ b/assets/templates/overseers/show.haml
@@ -4,7 +4,7 @@
   %h1
     = overseer.name
 
-.content
+.content-inner
   .pure-g
     .pure-u-1-2
       %a{href: "#/actions/" + overseer.actionName, class: "homeio-button action-button pure-button button-xlarge "}
