--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -69,6 +69,28 @@
     background: rgb(66, 184, 221); /* this is a light blue */
 }
 
-.multi-graph-graph-container {
-  font-size: 10px;
+.multi-graph-container {
+    height: 100%;
+    width: 100%;
+  
+  .multi-graph-graph-container {
+    font-size: 10px;
+    min-width: 300px;
+    min-height: 300px;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .multi-graph-checkbox-container {
+    
+    .multi-graph-checkbox-element {
+      border-radius: 5px;
+      background: #1f8dd6;
+      color: #fff;
+      display: inline-block;
+      margin: 5px;
+      padding: 4px;
+    }
+    
+  }
 }
