--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -43,6 +43,7 @@
 
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
+        <li class="pure-menu-item"><a href="#/measurements/graph" class="pure-menu-link" id="measLink">Multigraph</a></li>
         <li class="pure-menu-item"><a href="#/overseers" class="pure-menu-link" id="overseerLink">Overseers</a></li>
         <li class="pure-menu-item"><a href="#/actions" class="pure-menu-link" id="actionLink">Actions</a></li>
         <li class="pure-menu-item"><a href="#/stats" class="pure-menu-link" id="statsLink">Stats</a></li>
