multigraph: hour and week

--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -43,9 +43,11 @@
 
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
-        <li class="pure-menu-item"><a href="#/multigraph/current" class="pure-menu-link" id="measLink">Multigraph current</a></li>
-        <li class="pure-menu-item"><a href="#/multigraph/history/full_range" class="pure-menu-link" id="measLink">Multigraph full</a></li>
-        <li class="pure-menu-item"><a href="#/multigraph/history/day" class="pure-menu-link" id="measLink">Multigraph day</a></li>
+        <li class="pure-menu-item"><a href="#/multigraph/current" class="pure-menu-link" id="">Multigraph current</a></li>
+        <li class="pure-menu-item"><a href="#/multigraph/history/hour" class="pure-menu-link" id="">Multigraph hour</a></li>
+        <li class="pure-menu-item"><a href="#/multigraph/history/day" class="pure-menu-link" id="">Multigraph day</a></li>
+        <li class="pure-menu-item"><a href="#/multigraph/history/week" class="pure-menu-link" id="">Multigraph week</a></li>
+        <li class="pure-menu-item"><a href="#/multigraph/history/full_range" class="pure-menu-link" id="">Multigraph full</a></li>
         <li class="pure-menu-item"><a href="#/overseers" class="pure-menu-link" id="overseerLink">Overseers</a></li>
         <li class="pure-menu-item"><a href="#/actions" class="pure-menu-link" id="actionLink">Actions</a></li>
         <li class="pure-menu-item"><a href="#/stats" class="pure-menu-link" id="statsLink">Stats</a></li>
