--- a/assets/templates/meas/show.haml
+++ b/assets/templates/meas/show.haml
@@ -9,13 +9,9 @@
 
 .content-inner
   %p
-    %a{href: "#/measurements/" + meas.name + "/graph", class: "pure-button button-xlarge "}
+    %a{href: "#/graph/0/" + meas.name, class: "pure-button button-xlarge "}
       Graph
-    
-    &nbsp;
 
-    %a{href: "#/measurements/" + meas.name + "/history", class: "pure-button button-xlarge "}
-      History graph
 
 
   %table.pure-table.homeio-table
