--- a/assets/templates/actions/show.haml
+++ b/assets/templates/actions/show.haml
@@ -30,7 +30,7 @@
           Type master password to execute action
 
         %input{type: "hidden", name: "name", value: action.name}
-        %input{type: "text", name: "password", placeholder: "Type master password"}
+        %input{type: "password", name: "password", placeholder: "Type master password"}
         &nbsp;
         %input{type: "text", name: "result", id: 'action-result', placeholder: "Result", disabled: true}
         &nbsp;
