--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -25,6 +25,7 @@
 
   <script src="/assets/coffee/homeio_graph.js"></script>  
   <script src="/assets/coffee/homeio_graph_multi.js"></script>  
+  <script src="/assets/coffee/homeio_graph_dashboard.js"></script>  
   <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>  
   <script src="/assets/coffee/app.js"></script>
   
@@ -44,7 +45,7 @@
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
         
         <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-            <a href="#" id="menuLink1" class="pure-menu-link">Graph</a>
+            <a href="#/graph" id="menuLink1" class="pure-menu-link">Graph</a>
             <ul class="pure-menu-children">
                 <li class="pure-menu-item"><a href="#/graph/0/default" class="pure-menu-link" id="">current</a></li>
                 <li class="pure-menu-item"><a href="#/graph/60/default" class="pure-menu-link" id="">minute</a></li>
