meas group in multigraph

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -72,7 +72,7 @@
 .multi-graph-container {
     height: 100%;
     width: 100%;
-  
+
   .multi-graph-graph-container {
     font-size: 10px;
     min-width: 300px;
@@ -80,9 +80,9 @@
     height: 100%;
     width: 100%;
   }
-  
+
   .multi-graph-checkbox-container {
-    
+
     .multi-graph-checkbox-element {
       border-radius: 5px;
       background: #1f8dd6;
@@ -91,6 +91,15 @@
       margin: 5px;
       padding: 4px;
     }
-    
+
+    .multi-graph-group-checkbox-element {
+      border-radius: 5px;
+      background: #1fd68d;
+      color: #fff;
+      display: inline-block;
+      margin: 5px;
+      padding: 4px;
+    }
+
   }
 }
