--- a/assets/scss/app.css
+++ b/assets/scss/app.css
@@ -1,7 +1,3 @@
-#menu {
-  background-color: #222;
-  color: #fff;
-}
 .homeio-button {
   color: white;
   border-radius: 4px;
@@ -76,3 +72,12 @@
     display: inline-block;
     margin: 5px;
     padding: 4px; }
+  .multi-graph-container .multi-graph-checkbox-container .multi-graph-group-checkbox-element {
+    border-radius: 5px;
+    background: #1fd68d;
+    color: #fff;
+    display: inline-block;
+    margin: 5px;
+    padding: 4px; }
+
+/*# sourceMappingURL=app.css.map */
