--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -9,26 +9,26 @@
 
   <link rel="stylesheet" href="/assets/css/pure-min.css">
   <link rel="stylesheet" href="/assets/css/jquery-ui.min.css">
-  
+
   <link rel="stylesheet" href="/assets/scss/app.css">
 
   <script src="/assets/js/jquery-2.1.3.min.js"></script>
   <script src="/assets/js/jquery-ui.min.js"></script>
   <script src="/assets/js/jquery.flot.min.js"></script>
   <script src="/assets/js/jquery.flot.time.js"></script>
-  <script src="/assets/js/jquery.flot.resize.js"></script>  
+  <script src="/assets/js/jquery.flot.resize.js"></script>
   <script src="/assets/js/sammy-latest.min.js"></script>
   <script src="/assets/js/haml.js"></script>
   <script src="/assets/js/sammy.haml.js"></script>
   <script src="/assets/js/pure-ui.js"></script>
   <script src="/assets/js/md5.min.js"></script>
 
-  <script src="/assets/coffee/homeio_graph.js"></script>  
-  <script src="/assets/coffee/homeio_graph_multi.js"></script>  
-  <script src="/assets/coffee/homeio_graph_dashboard.js"></script>  
-  <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>  
+  <script src="/assets/coffee/homeio_graph.js"></script>
+  <script src="/assets/coffee/homeio_graph_multi.js"></script>
+  <script src="/assets/coffee/homeio_graph_dashboard.js"></script>
+  <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>
   <script src="/assets/coffee/app.js"></script>
-  
+
 </head>
 <body>
 
@@ -43,7 +43,7 @@
 
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#/measurements" class="pure-menu-link" id="measLink">Measurements</a></li>
-        
+
         <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
             <a href="#/graph" id="menuLink1" class="pure-menu-link">Graph</a>
             <ul class="pure-menu-children">
@@ -57,12 +57,13 @@
                 <li class="pure-menu-item"><a href="#/graph/-1/default" class="pure-menu-link" id="">full range</a></li>
             </ul>
         </li>
-        
+
         <li class="pure-menu-item"><a href="#/overseers" class="pure-menu-link" id="overseerLink">Overseers</a></li>
         <li class="pure-menu-item"><a href="#/actions" class="pure-menu-link" id="actionLink">Actions</a></li>
+        <li class="pure-menu-item"><a href="#/addons" class="pure-menu-link" id="actionLink">Addons</a></li>
         <li class="pure-menu-item"><a href="#/stats" class="pure-menu-link" id="statsLink">Stats</a></li>
-        
-        
+
+
       </ul>
     </div>
   </div>
@@ -73,4 +74,3 @@
 </body>
 </html>
 {{end}}
-
