--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -22,11 +22,13 @@
   <script src="/assets/js/sammy.haml.js"></script>
   <script src="/assets/js/pure-ui.js"></script>
   <script src="/assets/js/md5.min.js"></script>
+  <script src="/assets/js/moment.min.js"></script>
 
   <script src="/assets/coffee/homeio_graph.js"></script>
   <script src="/assets/coffee/homeio_graph_multi.js"></script>
   <script src="/assets/coffee/homeio_graph_dashboard.js"></script>
   <script src="/assets/coffee/homeio_meas_value_periodic.js"></script>
+  <script src="/assets/coffee/homeio_addon_output_renderer.js"></script>
   <script src="/assets/coffee/app.js"></script>
 
 </head>
