--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -6,6 +6,7 @@
   <title>HomeIO</title>
   <meta name="description" content="HomeIO">
   <meta name="author" content="Aleksander Kwiatkowski">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="/assets/css/pure-min.css">
   <link rel="stylesheet" href="/assets/css/jquery-ui.min.css">
