--- a/assets/templates/layout.tmpl
+++ b/assets/templates/layout.tmpl
@@ -24,6 +24,7 @@
   <script src="/assets/js/pure-ui.js"></script>
   <script src="/assets/js/md5.min.js"></script>
   <script src="/assets/js/moment.min.js"></script>
+  <script src="/assets/js/date.format.js"></script>
 
   <script src="/assets/coffee/homeio_graph.js"></script>
   <script src="/assets/coffee/homeio_graph_multi.js"></script>
